--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-source-filesystem": "^1.5.29",
     "gatsby-transformer-sharp": "^1.6.22",
     "react-helmet": "^5.2.0",
+    "serve": "^6.5.5",
     "styled-components": "^3.2.5"
   },
   "keywords": [
@@ -22,7 +23,8 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "start": "gatsby develop",
+    "start": "serve /public",
+    "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
