--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby-image": "^1.0.43",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-google-analytics": "^1.0.28",
+    "gatsby-plugin-nprogress": "^1.0.14",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-sharp": "^1.6.41",
     "gatsby-plugin-sitemap": "^1.2.22",
