migrated to gatsby v2 beta

--- a/package.json
+++ b/package.json
@@ -4,25 +4,24 @@
   "version": "1.0.0",
   "author": "Sebastian Vilhelm Nielsen",
   "dependencies": {
-    "gatsby": "^1.9.241",
-    "gatsby-image": "^1.0.43",
-    "gatsby-link": "^1.6.39",
-    "gatsby-plugin-google-analytics": "^1.0.28",
+    "babel-plugin-styled-components": "^1.5.1",
+    "gatsby": "^2.0.0-beta.9",
+    "gatsby-image": "^2.0.0-beta.2",
+    "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-nprogress": "^1.0.14",
-    "gatsby-plugin-react-helmet": "^2.0.8",
-    "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-sharp": "^1.6.41",
-    "gatsby-plugin-sitemap": "^1.2.22",
+    "gatsby-plugin-react-helmet": "2.0.11",
+    "gatsby-plugin-sharp": "^2.0.0-beta.2",
+    "gatsby-plugin-sitemap": "^1.2.25",
     "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-source-filesystem": "^1.5.29",
-    "gatsby-transformer-sharp": "^1.6.22",
+    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-transformer-sharp": "^1.6.27",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
-    "serve": "^6.5.5",
-    "styled-components": "^3.2.5"
+    "serve": "^9.1.0",
+    "styled-components": "^3.3.3"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
